--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -190,8 +190,8 @@ We want a number that indicates the quality of the cookie model. Specifically, w
 
 $$
 \begin{aligned} 
-\sigma^2 &= \frac{\sum{(X - \bar{X})^2}}{N}\\
-&= \frac{(X_1-\bar{X})^2 + (X_2-\bar{X})^2 + (X_3-\bar{X})^2}{N}  \\ 
+\sigma^2 &= \frac{\sum{(X - \mu)^2}}{N}\\
+&= \frac{(X_1-\mu)^2 + (X_2-\mu)^2 + (X_3-\mu)^2}{N}  \\ 
 &= \frac{(8-10)^2 + (10-10)^2 + (12-10)^2}{3}\\
 &= \frac{(-2)^2 + (0)^2 (2)^2}{3} \\
 &= \frac{4 + 0 + 4}{3} \\
@@ -221,7 +221,7 @@ Standard deviation is represented by the symbol $\sigma$ and can be calculated a
 
 $$
 \begin{aligned} 
-\sigma &= \sqrt{var(X)} \\
+\sigma &= \sqrt{\sigma^2} \\
 &= \sqrt{2.67} \\
 &= 1.63 grams\\
 \end{aligned} 
